--- a/package.json
+++ b/package.json
@@ -8,19 +8,13 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier-eslint \"$PWD/{,!(node_modules)/**/}*.{js,json}\"",
     "format:fix": "prettier-eslint --write \"$PWD/{,!(node_modules)/**/}*.{js,json}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev:container": "docker run -p 3000:3000 -v $PWD:/docker-sample -v /docker-sample/node_modules docker-sample nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
     "*.js": [
       "npm run lint:fix",
       "git add"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "author": "",
   "license": "ISC",
@@ -40,7 +34,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
     "prettier": "^2.0.5",
     "prettier-eslint-cli": "^5.0.0"
