--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.9'
 services:
-  express:
+  live-stream-backend:
     build:
       context: ./
     ports: 
-      - "5000:8080"
+      - "8080:8080"
     volumes: 
       - .:/usr/src/app
       - /usr/src/app/node_modules
