--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-ip": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.15"
+    "mongodb": "^6.4.0",
+    "mongoose": "^5.9.15",
+    "socket.io": "^4.7.4",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
